--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -623,7 +623,7 @@
                         Swal.fire({
                             icon: 'error',
                             title: 'Error',
-                            text: 'Order return failed',
+                            text: 'there is no more quantity',
                         });
                     }
                 }
