--- a/views/user/registration.ejs
+++ b/views/user/registration.ejs
@@ -184,35 +184,35 @@
                                 <form class="row contact_form" action="#" method="post" novalidate="novalidate"
                                     onsubmit="return validateForm()">
                                     <input type="text" id="referalcode" name="referralCode" placeholder="Enter referralCode"
-                                    />
+                                   required />
 
 
                                     <div class="col-md-12 form-group p_star">
                                         <input type="text" class="form-control" id="name" name="name" value=""
-                                            placeholder="Username">
+                                            placeholder="Username" required>
 
                                         <span id="nameError" class="error"></span>
 
                                         <input type="email" class="form-control" id="email" name="email" value=""
-                                            placeholder="Your Email">
+                                            placeholder="Your Email" required>
 
                                         <span id="emailError" class="error"></span>
 
                                         <input type="text" class="form-control" id="mobile" name="mobile" value=""
-                                            placeholder="mobile number">
+                                            placeholder="mobile number" required>
                                         <span id="mobileError" class="error"></span>
 
 
 
                                         <input type="password" class="form-control" id="password" name="password"
-                                            value="" placeholder="Password">
+                                            value="" placeholder="Password" required>
 
                                         <span id="pError" class="error"></span>
 
                                     </div>
                                     <div class="col-md-12 form-group p_star">
                                         <input type="password" class="form-control" id="confirmPassword"
-                                            name="confirmPassword" value="" placeholder="Conform your password">
+                                            name="confirmPassword" value="" placeholder="Conform your password" required>
                                         <span id="confirmPassword" class="error"></span>
 
                                     </div>
